--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -146,15 +146,14 @@
 
     <!-- TEKST WYJAŚNIAJĄCY -->
     <div class="intro-text">
-      Podaj swój adres e-mail, a wyślemy Ci link do logowania.  
-      Po kliknięciu w magic link zostaniesz automatycznie zalogowany i przekierowany do strony rejestracji.
+      Podaj swój adres e-mail. Po logowaniu otrzymasz dostęp do formularza rejestracji. Link wyślemy na Twój adres e-mail.
     </div>
 
     <!-- FORMULARZ -->
     <div class="form-container">
       <h2>Rejestracja / Logowanie</h2>
       <input type="email" id="emailInput" placeholder="Twój adres e-mail" />
-      <button class="btn-submit" id="emailBtn">Wyślij magic link</button>
+      <button class="btn-submit" id="emailBtn">Wyślij</button>
       <div class="log" id="log"></div>
     </div>
 
