--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -140,7 +140,8 @@
       <button class="btn-submit" id="emailBtn">Wyślij</button>
 
       <!-- ✅ DODANY PRZYCISK ZAMKNIJ -->
-      <button onclick="window.location.href='/'" style="margin-top:10px;background:#555;color:#fff;">
+      <button onclick="window.location.href='/'" style="margin-top:10px;background:#f44336
+;color:#fff;">
         Zamknij
       </button>
 
