--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -140,8 +140,7 @@
       <button class="btn-submit" id="emailBtn">Wyślij</button>
 
       <!-- ✅ DODANY PRZYCISK ZAMKNIJ -->
-      <button onclick="window.location.href='/'" style="margin-top:10px;background:#f44336
-;color:#fff;">
+      <button onclick="window.location.href='/'" style="margin-top:10px;background:#FF0000;color:#fff;">
         Zamknij
       </button>
 
