--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -131,7 +131,7 @@
     </div>
 
     <div class="intro-text">
-      Podaj swój adres e-mail. Po logowaniu otrzymasz dostęp do formularza rejestracji. Link wyślemy na Twój adres e-mail.
+    Po zalogowaniu otrzymasz dostęp do formularza rejestracji. Link wyślemy na Twój adres e-mail.
     </div>
 
     <div class="form-container">
