--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -135,9 +135,9 @@
     </div>
 
     <div class="form-container">
-      <h2>Rejestracja / Logowanie</h2>
+      <h2>Logowanie</h2>
       <input type="email" id="emailInput" placeholder="Twój adres e-mail" />
-      <button class="btn-submit" id="emailBtn">Wyślij</button>
+      <button class="btn-submit" id="emailBtn">Zaloguj</button>
 
       <!-- ✅ DODANY PRZYCISK ZAMKNIJ -->
       <button onclick="window.location.href='/'" style="margin-top:10px;background:#FF0000;color:#fff;">
