--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -131,7 +131,7 @@
     </div>
 
     <div class="intro-text">
-    Po zalogowaniu otrzymasz dostęp do formularza rejestracjiw bazie danych Auth Elektryków Polskich. <b> Link wyślemy na Twój adres e-mail.</b>
+    Po zalogowaniu otrzymasz dostęp do formularza rejestracji w bazie danych<em>Auth Elektryków Polskich</em>. <b> Link wyślemy na Twój adres e-mail.</b>
     </div>
 
     <div class="form-container">
