--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -156,8 +156,8 @@
     <input type="text" id="wojewodztwo" name="wojewodztwo">
 
     <label for="nrE">Nr uprawnień E:</label>
-    <input type="text" id="nrE" name="nrE">
-
+    <textarea id="nrE" name="nrE" placeholder="Jeżeli posiadasz również uprawnienia pomiarowe, wypełniasz tylko pole poniżej - nrEPomiary"></textarea>
+   
     <label for="nrEPomiary">Nr uprawnień E z pomiarami:</label>
     <textarea id="nrEPomiary" name="nrEPomiary" placeholder="Jeżeli nie posiadasz pozostaw pole puste"></textarea>
 
