--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -134,7 +134,8 @@
 <body>
 
   <!-- AWATAR GRAFICZNY (INFORMACYJNY) -->
-  <button class="avatar-btn" id="avatarBtn">👤</button>
+  <button class="avatar-btn" id="avatarBtn">⚡
+</button>
 
   <!-- FORMULARZ REJESTRACJI -->
   <form id="register-form">
