--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -27,7 +27,7 @@
       color: #fff;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       font-weight: 700;
       font-size: 20px;
       margin-bottom: 20px;
