--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -19,20 +19,22 @@
     }
 
     /* AWATAR GRAFICZNY */
-    .avatar-btn {
-      width: 48px;
-      height: 48px;
-      border-radius: 50%;
-      background: #2b6cb0;
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      font-weight: 700;
-      font-size: 20px;
-      margin-bottom: 20px;
-      cursor: default;
-    }
+ .avatar-btn {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background: #2b6cb0;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; /* wyrównanie w lewo */
+  padding-left: 6px;           /* dodaje odstęp od lewej krawędzi */
+  font-weight: 700;
+  font-size: 20px;
+  margin-bottom: 20px;
+  cursor: default;
+}
+
 
     /* FORMULARZ REJESTRACJI */
     form {
