--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -27,8 +27,7 @@
   color: #fff;
   display: flex;
   align-items: center;
-  justify-content: flex-start; /* wyrównanie w lewo */
-  padding-left: 6px;           /* dodaje odstęp od lewej krawędzi */
+  justify-content: center; /* wyrównanie w lewo */
   font-weight: 700;
   font-size: 20px;
   margin-bottom: 20px;
