--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -274,7 +274,8 @@
         result.textContent = 'Błąd: ' + error.message
         result.classList.add('error')
       } else {
-        window.location.href = '/logowanie';
+        // PRZEKIEROWANIE NA STRONĘ LOGOWANIA PO SUKCESIE
+        window.location.href = 'https://orep.pl/logowanie';
       }
     });
   </script>
