--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -2,52 +2,61 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Rejestracja</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
+
+  <!-- Supabase JS CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f4f6f8;
       display: flex;
       justify-content: center;
-      align-items: center;
-      padding: 40px;
-      flex-direction: column;
+      padding: 20px;
     }
-    .user-info {
+
+    /* KONTAINER DLA AWATAR I FORMULARZA */
+    .form-wrapper {
       display: flex;
-      align-items: center;
-      margin-bottom: 20px;
-      padding: 10px 15px;
-      border: 1px solid #000;
-      border-radius: 8px;
-      background-color: #fff;
-      gap: 10px;
+      flex-direction: column; /* pionowo: awatar nad formularzem */
+      align-items: flex-start; /* wszystko wyrównane do lewej */
+      width: 100%;
+      max-width: 600px;
     }
-    .avatar {
-      width: 40px;
-      height: 40px;
+
+    /* AWATAR GRAFICZNY */
+    .avatar-btn {
+      width: 64px;
+      height: 64px;
       border-radius: 50%;
-      background-color: #2b6cb0;
+      background: #2b6cb0;
       color: #fff;
       display: flex;
       align-items: center;
       justify-content: center;
       font-weight: 700;
-      font-size: 18px;
+      font-size: 20px;
+      margin-bottom: 15px; /* przerwa między awatarem a formularzem */
+      cursor: default;
     }
+
+    /* FORMULARZ REJESTRACJI */
     form {
       background-color: #ffffff;
       padding: 30px 40px;
       border-radius: 10px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       width: 100%;
-      max-width: 600px;
     }
+
     h2 {
       text-align: center;
       color: #333;
       margin-bottom: 20px;
     }
+
     label {
       display: block;
       margin-top: 15px;
@@ -55,24 +64,34 @@
       color: #555;
       font-weight: 600;
     }
+
     input[type="text"],
     input[type="email"],
     input[type="tel"],
-    input[type="date"],
+    select,
     textarea {
       width: 100%;
       padding: 10px 12px;
       border: 1px solid #ccc;
       border-radius: 6px;
       font-size: 15px;
+      transition: border 0.2s;
     }
+
+    input:focus, select:focus, textarea:focus {
+      border-color: #4CAF50;
+      outline: none;
+    }
+
     textarea {
       resize: vertical;
       min-height: 80px;
     }
+
     input[type="file"] {
       margin-top: 10px;
     }
+
     button {
       margin-top: 20px;
       width: 100%;
@@ -84,10 +103,13 @@
       border: none;
       border-radius: 6px;
       cursor: pointer;
+      transition: background-color 0.3s ease;
     }
+
     button:hover {
       background-color: #45a049;
     }
+
     #result {
       font-weight: bold;
       padding: 10px;
@@ -95,90 +117,168 @@
       text-align: center;
       border-radius: 6px;
     }
+
+    .success {
+      background-color: #4CAF50;
+      color: white;
+    }
+
     .error {
       background-color: #f44336;
       color: white;
     }
+
+    #loading {
+      display: none;
+      text-align: center;
+      color: #333;
+      font-weight: bold;
+      margin-top: 10px;
+    }
   </style>
 </head>
+
 <body>
 
-<!-- INFO O ZALOGOWANYM -->
-<div id="userInfo" class="user-info" style="display:none;">
-  <div id="avatar" class="avatar"></div>
-  <div id="userEmail"></div>
-</div>
+  <!-- WSPÓLNY KONTAINER DLA AWATAR I FORMULARZA -->
+  <div class="form-wrapper">
 
-<form id="register-form">
-  <h2>Rejestracja</h2>
+    <!-- AWATAR GRAFICZNY (INFORMACYJNY) -->
+    <button class="avatar-btn" id="avatarBtn">⚡</button>
 
-  <label for="imie">Imię:</label>
-  <input type="text" id="imie" required>
+    <!-- FORMULARZ REJESTRACJI -->
+    <form id="register-form">
+      <h2>Rejestracja</h2>
 
-  <label for="nazwisko">Nazwisko:</label>
-  <input type="text" id="nazwisko" required>
+      <label for="imie">Imię:</label>
+      <input type="text" id="imie" name="imie" required
+       oninput="this.value = this.value.toUpperCase();">
 
-  <label for="miasto">Miasto:</label>
-  <input type="text" id="miasto">
+      <label for="nazwisko">Nazwisko:</label>
+      <input type="text" id="nazwisko" name="nazwisko" required 
+       oninput="this.value = this.value.toUpperCase();">
 
-  <label for="wojewodztwo">Województwo:</label>
-  <input type="text" id="wojewodztwo">
+      <label for="miasto">Miasto:</label>
+      <input type="text" id="miasto" name="miasto">
 
-  <label for="nrE">Nr uprawnień E:</label>
-  <input type="text" id="nrE">
+      <label for="wojewodztwo">Województwo:</label>
+      <input type="text" id="wojewodztwo" name="wojewodztwo">
 
-  <label for="nrEPomiary">Nr uprawnień E z pomiarami:</label>
-  <input type="text" id="nrEPomiary">
+      <label for="nrE">Nr uprawnień E:</label>
+      <textarea id="nrE" name="nrE" placeholder="Jeżeli posiadasz również uprawnienia pomiarowe, wypełniasz tylko pole poniżej: Nr uprawnień E z pomiarami"></textarea>
+     
+      <label for="nrEPomiary">Nr uprawnień E z pomiarami:</label>
+      <textarea id="nrEPomiary" name="nrEPomiary" placeholder="Jeżeli nie posiadasz pozostaw pole puste"></textarea>
 
-  <label for="nrD">Nr uprawnień D:</label>
-  <input type="text" id="nrD">
+      <label for="nrD">Nr uprawnień D:</label>
+      <textarea id="nrD" name="nrD" placeholder="Jeżeli nie posiadasz pozostaw pole puste"></textarea>
 
-  <label for="dataWaznosci">Data ważności:</label>
-  <input type="date" id="dataWaznosci">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email">
 
-  <label for="wydanePrzez">Wydane przez:</label>
-  <input type="text" id="wydanePrzez">
+      <label for="telefon">Telefon:</label>
+      <input type="tel" id="telefon" name="telefon">
 
-  <label for="email">Email:</label>
-  <input type="email" id="email">
+      <label for="zajmujeSie">Zajmuje się:</label>
+      <textarea id="zajmujeSie" name="zajmujeSie" placeholder="Tu możesz podać informację o Tobie, które zostaną wyświetlone osobie szukającej elektryka w Twojej okolicy"></textarea>
 
-  <label for="telefon">Telefon:</label>
-  <input type="tel" id="telefon">
+      <label for="plik">Załącz skan uprawnień:</label>
+      <input type="file" id="plik" name="plik" accept="*/*" multiple>
 
-  <label for="zajmujeSie">Zajmuje się:</label>
-  <textarea id="zajmujeSie"></textarea>
+      <button type="submit">Zarejestruj</button>
 
-  <label for="plik">Załącz skan uprawnień:</label>
-  <input type="file" id="plik" multiple>
+      <p id="result"></p>
+      <p id="loading">Trwa rejestracja, proszę czekać...</p>
+    </form>
 
-  <button type="submit">Zarejestruj</button>
-  <p id="result"></p>
-  <p id="loading" style="display:none; text-align:center;">Trwa rejestracja...</p>
-</form>
+  </div>
 
-<script type="module">
-import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+  <script type="module">
+    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
-const supabase = createClient(
-  'https://tfbqqduxtsacvwfigsvt.supabase.co',
-  'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
-);
+    const supabaseUrl = 'https://tfbqqduxtsacvwfigsvt.supabase.co'
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
+    const supabase = createClient(supabaseUrl, supabaseKey)
 
-/* ✅ POPRAWNE WYKRYCIE SESJI */
-document.addEventListener('DOMContentLoaded', async () => {
-  const { data: { session } } = await supabase.auth.getSession();
+    const avatarBtn = document.getElementById('avatarBtn')
+    const emailInput = document.getElementById('email')
 
-  if (session && session.user) {
-    const userInfo = document.getElementById('userInfo');
-    const avatar = document.getElementById('avatar');
-    const emailDiv = document.getElementById('userEmail');
+    // Awatar zmienia inicjał po wpisaniu e-maila
+    emailInput.addEventListener('input', () => {
+      const email = emailInput.value.trim()
+      if (email) {
+        avatarBtn.textContent = email[0].toUpperCase()
+      } else {
+        avatarBtn.textContent = '👤'
+      }
+    })
 
-    userInfo.style.display = 'flex';
-    avatar.textContent = session.user.email.charAt(0).toUpperCase();
-    emailDiv.textContent = session.user.email;
-  }
-});
-</script>
+    document.getElementById('register-form').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      document.getElementById('loading').style.display = 'block';
+
+      const imie = document.getElementById('imie').value
+      const nazwisko = document.getElementById('nazwisko').value
+      const miasto = document.getElementById('miasto').value
+      const wojewodztwo = document.getElementById('wojewodztwo').value
+      const nrE = document.getElementById('nrE').value
+      const nrEPomiary = document.getElementById('nrEPomiary').value
+      const nrD = document.getElementById('nrD').value
+      const email = document.getElementById('email').value
+      const telefon = document.getElementById('telefon').value
+      const zajmujeSie = document.getElementById('zajmujeSie').value
+
+      const plikInput = document.getElementById('plik');
+      let plikUrls = [];
+
+      if (plikInput.files.length > 0) {
+        for (let i = 0; i < plikInput.files.length; i++) {
+          const file = plikInput.files[i];
+          const filePath = `permissions/${Date.now()}_${i}_${file.name}`;
+
+          const { error: uploadError } = await supabase.storage
+            .from('attachments')
+            .upload(filePath, file);
+
+          if (uploadError) {
+            document.getElementById('loading').style.display = 'none';
+            document.getElementById('result').textContent = 'Błąd przesyłania pliku: ' + uploadError.message;
+            document.getElementById('result').classList.add('error');
+            return;
+          }
+
+          const { data: publicUrlData } = supabase
+            .storage
+            .from('attachments')
+            .getPublicUrl(filePath);
+
+          plikUrls.push(publicUrlData.publicUrl);
+        }
+      }
+
+      const plikiString = plikUrls.join(',');
+
+      const { error } = await supabase
+        .from('tabela_elektrykow')
+        .insert([{
+          imie, nazwisko, miasto, wojewodztwo,
+          nrE, nrEPomiary, nrD, email, telefon,
+          zajmujeSie, plik: plikiString
+        }]);
+
+      const result = document.getElementById('result')
+      result.classList.remove('success', 'error')
+      document.getElementById('loading').style.display = 'none';
+
+      if (error) {
+        result.textContent = 'Błąd: ' + error.message
+        result.classList.add('error')
+      } else {
+        // PRZEKIEROWANIE NA STRONĘ LOGOWANIA PO SUKCESIE
+        window.location.href = 'https://orep.pl/logowanie';
+      }
+    });
+  </script>
 
 </body>
 </html>
