--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -17,16 +17,14 @@
       padding: 20px;
     }
 
-    /* KONTAINER DLA AWATAR I FORMULARZA */
     .form-wrapper {
       display: flex;
-      flex-direction: column; /* pionowo: awatar nad formularzem */
-      align-items: flex-start; /* wszystko wyrównane do lewej */
+      flex-direction: column;
+      align-items: flex-start;
       width: 100%;
       max-width: 600px;
     }
 
-    /* AWATAR GRAFICZNY */
     .avatar-btn {
       width: 64px;
       height: 64px;
@@ -38,11 +36,10 @@
       justify-content: center;
       font-weight: 700;
       font-size: 20px;
-      margin-bottom: 15px; /* przerwa między awatarem a formularzem */
+      margin-bottom: 15px;
       cursor: default;
     }
 
-    /* FORMULARZ REJESTRACJI */
     form {
       background-color: #ffffff;
       padding: 30px 40px;
@@ -68,19 +65,12 @@
     input[type="text"],
     input[type="email"],
     input[type="tel"],
-    select,
     textarea {
       width: 100%;
       padding: 10px 12px;
       border: 1px solid #ccc;
       border-radius: 6px;
       font-size: 15px;
-      transition: border 0.2s;
-    }
-
-    input:focus, select:focus, textarea:focus {
-      border-color: #4CAF50;
-      outline: none;
     }
 
     textarea {
@@ -103,11 +93,6 @@
       border: none;
       border-radius: 6px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #45a049;
     }
 
     #result {
@@ -118,11 +103,6 @@
       border-radius: 6px;
     }
 
-    .success {
-      background-color: #4CAF50;
-      color: white;
-    }
-
     .error {
       background-color: #f44336;
       color: white;
@@ -131,7 +111,6 @@
     #loading {
       display: none;
       text-align: center;
-      color: #333;
       font-weight: bold;
       margin-top: 10px;
     }
@@ -140,50 +119,45 @@
 
 <body>
 
-  <!-- WSPÓLNY KONTAINER DLA AWATAR I FORMULARZA -->
   <div class="form-wrapper">
 
-    <!-- AWATAR GRAFICZNY (INFORMACYJNY) -->
     <button class="avatar-btn" id="avatarBtn">⚡</button>
 
-    <!-- FORMULARZ REJESTRACJI -->
     <form id="register-form">
       <h2>Rejestracja</h2>
 
       <label for="imie">Imię:</label>
-      <input type="text" id="imie" name="imie" required
-       oninput="this.value = this.value.toUpperCase();">
+      <input type="text" id="imie" required oninput="this.value=this.value.toUpperCase();">
 
       <label for="nazwisko">Nazwisko:</label>
-      <input type="text" id="nazwisko" name="nazwisko" required 
-       oninput="this.value = this.value.toUpperCase();">
+      <input type="text" id="nazwisko" required oninput="this.value=this.value.toUpperCase();">
 
       <label for="miasto">Miasto:</label>
-      <input type="text" id="miasto" name="miasto">
+      <input type="text" id="miasto">
 
       <label for="wojewodztwo">Województwo:</label>
-      <input type="text" id="wojewodztwo" name="wojewodztwo">
+      <input type="text" id="wojewodztwo">
 
       <label for="nrE">Nr uprawnień E:</label>
-      <textarea id="nrE" name="nrE" placeholder="Jeżeli posiadasz również uprawnienia pomiarowe, wypełniasz tylko pole poniżej: Nr uprawnień E z pomiarami"></textarea>
-     
+      <textarea id="nrE"></textarea>
+
       <label for="nrEPomiary">Nr uprawnień E z pomiarami:</label>
-      <textarea id="nrEPomiary" name="nrEPomiary" placeholder="Jeżeli nie posiadasz pozostaw pole puste"></textarea>
+      <textarea id="nrEPomiary"></textarea>
 
       <label for="nrD">Nr uprawnień D:</label>
-      <textarea id="nrD" name="nrD" placeholder="Jeżeli nie posiadasz pozostaw pole puste"></textarea>
+      <textarea id="nrD"></textarea>
 
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email">
+      <input type="email" id="email">
 
       <label for="telefon">Telefon:</label>
-      <input type="tel" id="telefon" name="telefon">
+      <input type="tel" id="telefon">
 
       <label for="zajmujeSie">Zajmuje się:</label>
-      <textarea id="zajmujeSie" name="zajmujeSie" placeholder="Tu możesz podać informację o Tobie, które zostaną wyświetlone osobie szukającej elektryka w Twojej okolicy"></textarea>
+      <textarea id="zajmujeSie"></textarea>
 
       <label for="plik">Załącz skan uprawnień:</label>
-      <input type="file" id="plik" name="plik" accept="*/*" multiple>
+      <input type="file" id="plik" multiple>
 
       <button type="submit">Zarejestruj</button>
 
@@ -196,88 +170,51 @@
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
-    const supabaseUrl = 'https://tfbqqduxtsacvwfigsvt.supabase.co'
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
-    const supabase = createClient(supabaseUrl, supabaseKey)
+    const supabase = createClient(
+      'https://tfbqqduxtsacvwfigsvt.supabase.co',
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
+    )
+
+    /* 🔒 OBOWIĄZKOWA KONTROLA LOGOWANIA */
+    const { data: { user } } = await supabase.auth.getUser()
+    if (!user) {
+      window.location.href = 'https://orep.pl/logowanie'
+    }
+    /* 🔒 KONIEC */
 
     const avatarBtn = document.getElementById('avatarBtn')
     const emailInput = document.getElementById('email')
 
-    // Awatar zmienia inicjał po wpisaniu e-maila
     emailInput.addEventListener('input', () => {
-      const email = emailInput.value.trim()
-      if (email) {
-        avatarBtn.textContent = email[0].toUpperCase()
-      } else {
-        avatarBtn.textContent = '👤'
-      }
+      avatarBtn.textContent = emailInput.value ? emailInput.value[0].toUpperCase() : '👤'
     })
 
     document.getElementById('register-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      document.getElementById('loading').style.display = 'block';
+      e.preventDefault()
+      document.getElementById('loading').style.display = 'block'
 
-      const imie = document.getElementById('imie').value
-      const nazwisko = document.getElementById('nazwisko').value
-      const miasto = document.getElementById('miasto').value
-      const wojewodztwo = document.getElementById('wojewodztwo').value
-      const nrE = document.getElementById('nrE').value
-      const nrEPomiary = document.getElementById('nrEPomiary').value
-      const nrD = document.getElementById('nrD').value
-      const email = document.getElementById('email').value
-      const telefon = document.getElementById('telefon').value
-      const zajmujeSie = document.getElementById('zajmujeSie').value
+      const { error } = await supabase.from('tabela_elektrykow').insert([{
+        imie: imie.value,
+        nazwisko: nazwisko.value,
+        miasto: miasto.value,
+        wojewodztwo: wojewodztwo.value,
+        nrE: nrE.value,
+        nrEPomiary: nrEPomiary.value,
+        nrD: nrD.value,
+        email: email.value,
+        telefon: telefon.value,
+        zajmujeSie: zajmujeSie.value
+      }])
 
-      const plikInput = document.getElementById('plik');
-      let plikUrls = [];
-
-      if (plikInput.files.length > 0) {
-        for (let i = 0; i < plikInput.files.length; i++) {
-          const file = plikInput.files[i];
-          const filePath = `permissions/${Date.now()}_${i}_${file.name}`;
-
-          const { error: uploadError } = await supabase.storage
-            .from('attachments')
-            .upload(filePath, file);
-
-          if (uploadError) {
-            document.getElementById('loading').style.display = 'none';
-            document.getElementById('result').textContent = 'Błąd przesyłania pliku: ' + uploadError.message;
-            document.getElementById('result').classList.add('error');
-            return;
-          }
-
-          const { data: publicUrlData } = supabase
-            .storage
-            .from('attachments')
-            .getPublicUrl(filePath);
-
-          plikUrls.push(publicUrlData.publicUrl);
-        }
-      }
-
-      const plikiString = plikUrls.join(',');
-
-      const { error } = await supabase
-        .from('tabela_elektrykow')
-        .insert([{
-          imie, nazwisko, miasto, wojewodztwo,
-          nrE, nrEPomiary, nrD, email, telefon,
-          zajmujeSie, plik: plikiString
-        }]);
-
-      const result = document.getElementById('result')
-      result.classList.remove('success', 'error')
-      document.getElementById('loading').style.display = 'none';
+      document.getElementById('loading').style.display = 'none'
 
       if (error) {
         result.textContent = 'Błąd: ' + error.message
         result.classList.add('error')
       } else {
-        // PRZEKIEROWANIE NA STRONĘ LOGOWANIA PO SUKCESIE
-        window.location.href = 'https://orep.pl/logowanie';
+        window.location.href = 'https://orep.pl/logowanie'
       }
-    });
+    })
   </script>
 
 </body>
